--- a/src/css/NumberList.css
+++ b/src/css/NumberList.css
@@ -1,8 +1,18 @@
 .number-list {
-    max-height: 100%;
+    height: 100%;
+}
+
+.number-list > h2 {
+    height: 4rem;
+    margin: 0;
+    text-transform: capitalize;
+}
+
+.number-list > div {
+    height: calc(100% - 4rem);
     overflow: auto;
 }
 
-h2 {
-    text-transform: capitalize;
+.item {
+    display: block;
 }
