--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,10 +27,10 @@ header h1 {
 }
 
 .container > div {
-  flex: 1 0 auto;
+  flex-grow: 1;
 }
 
-.controls {
+.container > .controls {
   flex-grow: 0;
   align-self: center;
   text-align: center;
@@ -52,4 +52,28 @@ header h1 {
 .controls > button:focus {
   outline: none;
   border-color: var(--darkest);
+}
+
+@media screen and (max-width: 800px) {
+
+  header h1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .container {
+    border-radius: 0;
+    margin: 0;
+    height: calc(100vh - 8rem);
+    flex-direction: column;
+  }
+
+  .container > div {
+    width: 100%;
+  }
+
+  .controls > button {
+    margin: 1rem auto;
+  }
+
 }
